--- a/style.css
+++ b/style.css
@@ -244,3 +244,9 @@ footer img {
     height:25px;
     width: 25px;
 }
+footer img:hover {
+  border-radius: 50%;
+  background-color: darkgrey;
+  border:1px solid rgb(112, 111, 111);
+  box-shadow: 0 1px 6px rgba(12, 10, 10, 0.28);
+  }
